--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,6 +6,16 @@
   --cell-size: 36px;
 }
 
+html {
+  background-image: url("../asset/images/world.svg");
+  background-blend-mode: overlay;
+  background-repeat: no-repeat;
+  background-position: center;
+  object-position: center;
+  object-fit: cover;
+  background-size: 100% 100%;
+  background-color: #000e29;
+}
 .pack {
   box-sizing: content-box;
   border: 1px dotted #00000020;
@@ -51,11 +61,21 @@
   cursor: grab;
   transform: rotate(0deg);
 }
+
+#dialogue {
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 .bgImg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-
+  opacity: 0.5;
   background-color: rgba(255, 0, 0, 0.293) !important;
   border: rgba(255, 0, 0, 0.506) !important;
 }
