--- a/src/style/style.css
+++ b/src/style/style.css
@@ -16,6 +16,58 @@ html {
   background-size: 100% 100%;
   background-color: #000e29;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  max-width: 1024px !important;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+}
+
+.screen {
+  max-width: 720px !important;
+  width: 100%;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ff990032;
+  border: 1px solid #ff9900;
+  color: #ff9900;
+}
+
+footer {
+  color: white;
+  margin: 0 20px;
+  font-size: 20px !important;
+}
+
+#logo {
+  object-position: center;
+  object-fit: cover;
+  width: 40px;
+  display: inline-block;
+  margin-right: 6px;
+  margin-bottom: 4px;
+}
+header {
+  display: flex;
+  flex-direction: column;
+  h1 {
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+}
 .pack {
   box-sizing: content-box;
   border: 1px dotted #00000020;
@@ -29,8 +81,8 @@ html {
 
 .btn {
   cursor: pointer;
-  background-color: #ffffff;
-  color: #0000ff;
+  background-color: #000b3435;
+  color: #a7a7ffe5;
 }
 
 .bringFront {
@@ -55,8 +107,8 @@ html {
   /* position: absolute; */
   top: 0;
   left: 0;
-  border: 1px solid #0000ff;
-  background-color: #0000ff10;
+  border: 1px solid #ff99002f;
+  background-color: #ff99008a;
   box-sizing: border-box;
   cursor: grab;
   transform: rotate(0deg);
@@ -155,4 +207,12 @@ html {
 .errorBorder {
   border: 1px solid red !important;
   background-color: rgba(255, 0, 0, 0.2) !important;
+}
+
+/* Media query for medium screen sizes (md) and up */
+@media (max-width: 768px) {
+  #field.begin {
+    flex-direction: column !important;
+    align-items: center;
+  }
 }
